<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    tools:context="me.smac89.rps_weezsims.MainActivity"
    android:gravity="center_horizontal"
    android:weightSum="1"
    android:background="@color/colorAccent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/prompt"
            android:id="@+id/player1Prompt"
            android:layout_gravity="start|center_vertical|start"
            android:layout_margin="40dp" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/player1Choice"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:entries="@array/rps_choices"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/prompt"
            android:id="@+id/player2Prompt"
            android:layout_gravity="start|center_vertical|start"
            android:layout_margin="40dp" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/player2Choice"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:entries="@array/rps_choices" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnaction"
        android:id="@+id/action_button"
        android:layout_gravity="bottom|center_horizontal"/>
</LinearLayout>
